# pcchess

./: .gitignore  CMakeLists.txt  README.md  pcc_mpi.cpp  pcc_root.cpp  pcc_serial.cpp  pcc_slow_tree.cpp  pcc_treesplit.cpp
core/: abstract_piece.cpp  abstract_piece.h  abstract_player.cpp  abstract_player.h  adviser.cpp  adviser.h  advisor.cpp  advisor.h  board.cpp  board.h  cannon.cpp  cannon.h  chariot.cpp  chariot.h  elephant.cpp  elephant.h  game.cpp  game.h  general.cpp  general.h  horse.cpp  horse.h  king.cpp  king.h  mcts_player.cpp  mcts_player.h  mpi_node.cpp  mpi_node.h  mpi_uct_player.cpp  mpi_uct_player.h  node.cpp  node.h  pawn.cpp  pawn.h  player.cpp  player.h  pos_move.cpp  pos_move.h  position.cpp  position.h  (+15 more)
main/: main.cpp
player/: human_player.cpp  human_player.h  node.cpp  node.h  random_player.cpp  random_player.h  root_uct_player.cpp  root_uct_player.h  serialization_atomic.h  serialization_export.h  serialize_tuple.h  slow_tree_uct_player.cpp  slow_tree_uct_player.h  threaded_node.cpp  threaded_node.h  threaded_uct_player.cpp  threaded_uct_player.h  treesplit_node.cpp  treesplit_node.h  uct_player.cpp  uct_player.h  uct_treesplit_player.cpp  uct_treesplit_player.h
player/utils/: fast_ptr_hashtable.hpp  lock_free_queue.hpp  serialization_atomic.hpp  serialization_export.hpp  serialization_tuple.hpp  thread_safe_queue.hpp
scripts/: AnalysePCC.m  AnalysePCCBlack.m
serial/: main.cpp
slow_tree/: main.cpp  slow_tree_uct_player.cpp  slow_tree_uct_player.h
