project(pcchess C CXX)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
find_package(Threads REQUIRED)
find_package(MPI REQUIRED)
find_package(Boost 1.54 REQUIRED COMPONENTS mpi serialization)
include_directories(${Boost_INCLUDE_DIRS})
include_directories(${MPI_CXX_INCLUDE_PATH})
aux_source_directory(core CORESRC_LIST)
aux_source_directory(serial SERIALSRC_LIST)
aux_source_directory(slow_tree SLOWTREESRC_LIST)
add_library(pcchess_core SHARED ${CORESRC_LIST})
add_executable(pcchess_serial ${SERIALSRC_LIST})
add_executable(pcchess_slow_tree ${SLOWTREESRC_LIST})
target_link_libraries(pcchess_serial pcchess_core ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
target_link_libraries(pcchess_slow_tree pcchess_core ${MPI_CXX_LIBRARIES} ${Boost_LIBRARIES})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -std=c++11")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
