project(pcchess C CXX)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
find_package(Threads REQUIRED)
find_package(MPI REQUIRED)
find_package(Boost 1.55 REQUIRED COMPONENTS mpi serialization)
include_directories(${Boost_INCLUDE_DIRS})
include_directories(${MPI_CXX_INCLUDE_PATH})
aux_source_directory(core CORESRC_LIST)
aux_source_directory(player PLAYERSRC_LIST)
add_library(pcc_core SHARED ${CORESRC_LIST})
add_library(pcc_player SHARED ${PLAYERSRC_LIST})
add_executable(pcc_serial pcc_serial.cpp)
add_executable(pcc_mpi pcc_mpi.cpp)
target_link_libraries(pcc_serial pcc_core pcc_player ${MPI_CXX_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
target_link_libraries(pcc_mpi pcc_core pcc_player ${MPI_CXX_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -std=c++11")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG -Wall -Wextra -Wshadow")
